# internship

./: CMakeLists.txt  README.md  container.cpp  container.h  imageitem.cpp  imageitem.h  item.h  main.cpp  masonry.cpp  masonry.h  masonry_container.h  masonry_imageitem.h  masonry_item.h  mycustomwidget.cpp  mycustomwidget.h  mymainwidget.cpp  mymainwidget.h  mywidget.cpp  mywidget.h  settingswidget.h  thirdOne.pro  webimagewidget.cpp  webimagewidget.h
app/: CMakeLists.txt  imageitem.h  mycustomwidget.h  mymainwidget.cpp  settingswidget.cpp  webimagewidget.cpp  webimagewidget.h
lib/: CMakeLists.txt  container.h
